mips 完成代码，竞速错两个